# ostia

./: .codeclimate.yml  .gitmodules  README.md  docker-compose.yaml  keycloak-realm.json
.circleci/: config.yml
app/: Dockerfile  config.ru
auth-ruby/: Dockerfile  Gemfile  Rakefile  auth.rb  test.rb
auth-ruby/examples/: config.yml
auth-ruby/examples/policies/: localhost.rego
auth-ruby/src/: auth.rb  config.rb
auth-ruby/src/config/: authorization.rb  identity.rb  metadata.rb
auth-ruby/test/: test_auth.rb  test_helper.rb
auth-ruby/test/config/: test_authorization.rb
auth-ruby/test/fixtures/: config.yml
envoy/: Dockerfile  envoy.yaml
envoy-xds-grpc/: auth
limitador/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs
limitador/src/: counter.rs  lib.rs  limit.rs  server.rs  storage.rs
limitador/src/storage/: in_memory.rs  mod.rs  redis.rs
limitador/tests/: integration_tests.rs
old-ostia-operator/deploy/: cr.yaml
old-ostia-operator/test/: integration.sh
ostia-operator/: .dockerignore  Brewfile  Gopkg.toml  Makefile  go.mod  go.sum
ostia-operator/cmd/manager/: main.go
ostia-operator/config/: config.yaml
ostia-operator/deploy/: operator.yaml  rbac.yaml  role.yaml  role_binding.yaml  service_account.yaml
ostia-operator/test/: integration.sh
portal/: Gemfile  README.md
portal/config/: application.rb  credentials.yml.enc  routes.rb
portal/db/: schema.rb
rate-limit-rust/: Cargo.toml  build.rs
threescaleAPI-operator/config/: config.yaml
threescaleAPI-operator/deploy/: cr.yaml  crd.yaml  operator.yaml  rbac.yaml  sa.yaml
(+143 files in other folders)
