[package]
name = "rate-limit"
version = "0.1.0"
authors = ["Michal Cichra <michal@cichra.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[dependencies]
tonic = "0.2"
prost = "0.6"
prost-types = "0.6.1"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = "0.2"
